refactor: 다중 태그 관리 로직 수정